--- a/sections/conclusioni.tex
+++ b/sections/conclusioni.tex
@@ -1,18 +1,13 @@
 \chapter{Conclusioni}
 \label{conclusioni}
-La tesi si focalizza sul rilevamento di domini generati algoritmicamente (DGA) che sono utilizzati dalle botnet per attuare comunicazione coi centri di comando e controllo (C\&C). Tale meccanismo è utilizzato dai principali malware quali cryptolocker, zeus, pushdo, rovnix, tinba, conficker, matsnu e ramdo. L'innovazione attuata dalle tecniche di Machine Learning odierne permette ai difensori di attuare metodi proattivi nei confronti degli antagonisti. Nel caso particolare dei DGA, la metodologia difesa comunemente attuata è l'inclusione di grandi quantità di domini DGA in liste di esclusione statiche. Tale metodo lascia libertà agli antagonisti di modificare i propri algoritmi ed eludere la difesa. Tramite l'ausilio di un classificatore Machine Learning è possibile predire in maniera dinamica la natura dei domini contattati, attuando un metodo di difesa più efficace.
+La tesi si focalizza sul rilevamento di domini generati algoritmicamente (DGA) che sono utilizzati dalle botnet per attuare comunicazione coi centri di comando e controllo (C\&C). Tale meccanismo è alla base dei principali malware quali Cryptolocker, Zeus, Ppushdo, Rovnix, Tinba, Conficker, Matsnu e Ramdo, che in tal modo riescono a superare i sistemi di difesa. Nel caso particolare dei DGA, la metodologia difesa comunemente attuata è l'inclusione di grandi quantità di domini DGA in liste di esclusione statiche. Tale metodo lascia libertà agli attaccanti di modificare i propri algoritmi ed eludere la difesa. L'idea innovativa della tesi è di adottare tecniche di classificazione basate su Machine Learning per migliorare le percentuali di rilevamento degli attacchi che utilizzano DGA.
 
-Nella prima fase si è progettato e implementato un nuovo classificatore basato su Machine Learning in grado di distinguere con successo i domini reali da quelli generati algoritmicamente. L'attività ha richiesto la messa a punto di un dataset in grado di rappresentare realisticamente le diverse tipologie di domini DGA e domini legittimi. Tale fase ha richiesto quindi la definizione delle features in grado di catturare le differenze linguistiche presenti nei domini e permettere al classificatore di separare correttamente le due categorie. Il classificatore è stato testato e allenato anche rispetto ad caso particolare di DGA, \textit{suppobox} che ha messo in difficoltà l'efficacia del classificatore progettato. In seguito a tali risultati si è progettato un classificatore neurale, in grado di eseguire la medesima classificazione senza l'ausilio di feature ingegnerizzate. Tale classificatore non ha migliorato i risultati ottenuti dall'algoritmo di Machine Learning, ma ha dimostrato la medesima possibilità di apprendimento con minori costi computazionali. Questo grazie alle proprietà delle reti neurali, in grado di estrarre autonomamente le feature necessarie a
+A tale scopo, nella prima fase è stato progettato e implementato un nuovo classificatore basato su Machine Learning in grado di distinguere con successo i domini reali da quelli generati algoritmicamente. L'attività ha richiesto la messa a punto di un dataset in grado di rappresentare realisticamente le diverse tipologie di domini DGA e domini legittimi, tramite la definizione delle features in grado di catturare le differenze linguistiche presenti nei domini. Tale sistema ha consentito al classificatore di separare correttamente le due categorie ad eccezione del caso di DGA \textit{Suppobox} che ha messo in difficoltà l'efficacia della classificazione. In seguito a tali risultati si è progettato un classificatore neurale, in grado di eseguire la medesima classificazione senza l'ausilio di feature ingegnerizzate. Tale classificatore non ha migliorato i risultati ottenuti dall'algoritmo di Machine Learning, ma ha dimostrato la medesima capacità di apprendimento con minori costi computazionali, grazie alle proprietà delle reti neurali.
 
-Un successivo passo di miglioramento è stato tentato applicando un sistema di Generative Adversarial Network (\textit{abbr. GAN}) basata sull'architettura di un Autoencoder. Tale Autoencoder ha attuato la codifica e decodifica di domini reali, estraendo nel processo le caratteristiche fondamentali. A partire da questo risultato si è progettato una GAN basandosi sull'architettura dell'Autoencoder, con lo scopo di creare domini sintetici contenenti le stesse caratteristiche fondamentali estratte dai domini reali. Il risultato ottenuto è stato un subset di domini sintetici con i quali è stato possibile testare il classificatore neurale, ottenendo perdite di efficacia nell'esatta classificazione dei domini. Si è proceduto quindi ad allenare ulteriormente il classificatore neurale con i domini provenienti dalla GAN, ottenendo un miglioramento generale nella capacità di classificazione mostrata precedentemente all'utilizzo del sistema di adversarial learning.
+Un successivo passo di miglioramento è stato sperimentato applicando un sistema di Generative Adversarial Network (\textit{abbr. GAN}) basata sull'architettura di un Autoencoder. Tale Autoencoder ha attuato la codifica e decodifica di domini reali, estraendo nel processo le caratteristiche fondamentali. A partire da questo risultato, si è progettato un sistema GAN basandosi sull'architettura dell'Autoencoder, con lo scopo di creare domini sintetici contenenti le stesse caratteristiche fondamentali estratte dai domini reali. Il risultato è stato un subset di domini sintetici con i quali è stato testato il classificatore neurale. Poiché l'esatta classificazione dei domini è peggiorata, si è proceduto ad allenare ulteriormente il classificatore neurale con i domini provenienti dal sistema GAN. In questo modo si è ottenuto un miglioramento generale nella capacità di classificazione rispetto all'utilizzo del sistema di adversarial learning.
 
-In conclusione è possibile affermare che è stato possibile realizzare un classificatore in grado di analizzare con buona approssimazione i domini DGA rispetto a domini legittimi. Il caso particolare di Suppobox ha tuttavia ridotto la capacità del classificatore di una percentuale considerevole, ed anche l'architettura alternativa ideata tramite reti neurali non ha sortito l'effetto sperato e recuperato la prestazione perduta. 
-Tale risultato negativo è forse migliorabile utilizzando un'architettura di rete neurale più evoluta, ad esempio tramite l'utilizzo di una Rete Convoluzionale, in grado di eseguire una più precisa rilevazione delle caratteristiche fondamentali che compongono i domini. 
-L'obiettivo di generare domini realistici tramite l'utilizzo di una GAN è stato in parte raggiunto. I domini generati dimostrano alcune caratteristiche linguistiche proprie dei vocaboli reali,  tuttavia sono ancora distinguibili dal subset reale utilizzato dai classificatori. Tale risultato in parte negativo ha comunque dimostrato di mettere in crisi l'efficacia del classificatore neurale durante la fase di testing. Il classificatore neurale successivamente riallenato aggiungendo l'insieme dei domini generati dalla GAN nel subset di training, non ha mostrato i miglioramenti sperati in fase progettuale, ma tuttavia ha dimostrato robustezza nei confronti degli stessi domini sintetici provenienti dalla GAN.
+In conclusione, è stato possibile realizzare un classificatore in grado di analizzare con ottima approssimazione i domini DGA rispetto ai domini legittimi. Il caso particolare di\textit{Suppobox}ha tuttavia ridotto considerevolmente la capacità del classificatore. Anche l'architettura alternativa ideata tramite reti neurali non ha sortito l'effetto auspicato. Pertanto si ritiene che tale risultato è migliorabile ampliando il classificatore con una rete convoluzionale che può estrarre le features linguistiche dei domini in maniera più efficace, che costituisce una attività di sviluppo futuro.
 
-Gli sviluppi futuri auspicabili sono: 
-\begin{itemize}
-\item La progettazione di un classificatore neurale con un'architettura più elaborata, in grado di superare i risultati ottenuti, in particolare con l'ausilio di Reti Convoluzionali.
-\item L'ideazione di un sistema di Adversarial Learning efficace rispetto al caso particolare di generazione di DGA con il fine di rafforzare la qualità del classificatore. Sebbene il concetto di Generative Adversarial Network abbia dimostrato buoni risultati in ambito di visione artificiale e image manipulation, non si può affermare lo stesso per il caso analizzato. In particolare la realizzazione di una GAN funzionante ha richiesto un notevole sforzo ideativo e implementativo a causa della complessità della rete ed una diffusa instabilità, tipica di tale architettura. Atre metodologie di reti generative come i Variational Autoencoders, potrebbero fornire un risultato più significativo nel caso particolare di generazione di domini di rete in grado di rinforzare l'efficacia di un classificatore neurale per DGA.
-\end{itemize}
+L'obiettivo di generare domini realistici tramite l'utilizzo di una GAN è stato in parte raggiunto in quanto i domini generati dimostrano caratteristiche linguistiche proprie dei vocaboli reali, tuttavia sono ancora distinguibili dal subset reale utilizzato dai classificatori. Tale risultato in parte negativo ha comunque dimostrato di mettere in crisi l'efficacia del classificatore neurale durante la fase di testing. Il classificatore neurale successivamente riallenato aggiungendo l'insieme dei domini generati dalla GAN nel subset di training, non ha mostrato i miglioramenti attesi in fase progettuale, ma ha dimostrato robustezza nei confronti degli stessi domini sintetici provenienti dalla GAN. Altre metodologie di reti generative, come i Variational Autoencoders~\cite{VAE}, potrebbero migliorare l'efficacia di un classificatore di DGA basato su reti neurali grazie ad una migliore stabilità in fase di training, generando domini più realistici su cui allenare il classificatore.
+
 
