--- a/sections/references.bib
+++ b/sections/references.bib
@@ -585,3 +585,10 @@ keywords={data structures;high level languages;mathematics computing;numerical a
 doi={10.1109/MCSE.2011.37}, 
 ISSN={1521-9615}, 
 month={March},}
+
+@misc{VAE,
+Author = {Anders Boesen Lindbo Larsen and Søren Kaae Sønderby and Hugo Larochelle and Ole Winther},
+Title = {Autoencoding beyond pixels using a learned similarity metric},
+Year = {2015},
+Eprint = {arXiv:1512.09300},
+}
